--- a/pages/about.html
+++ b/pages/about.html
@@ -20,21 +20,26 @@
         </nav>
     </header>
 
-    <!-- About Section -->
-    <section id="about" class="content-section">
+    <!-- Hero Section for About Page -->
+    <section id="hero" class="hero-about">
+        <h1>About NicheCraft Automation</h1>
+        <p>Innovative solutions for multi-billion-dollar companies.</p>
+    </section>
+
+    <!-- About Section with a professional layout -->
+    <section id="about" class="content-section about-content">
         <div class="about-container">
-            <h1>About NicheCraft Automation</h1>
-            <p>NicheCraft Automation is committed to delivering premium automation solutions for multi-billion-dollar companies. Our cutting-edge technology and innovation-driven approach help businesses optimize processes and scale to new heights of success.</p>
-            <p>Our team consists of world-class experts in artificial intelligence, machine learning, leadership development, and digital transformation. With a strong focus on excellence and tailored solutions, we empower companies to stay competitive in an ever-changing landscape.</p>
-
+            <h2>Our Mission</h2>
+            <p>NicheCraft Automation empowers global enterprises with world-class automation solutions. Our goal is to drive operational efficiency, unlock new opportunities, and create sustainable value for our clients.</p>
+            
             <h2>Our Vision</h2>
-            <p>To become the global leader in automation services, setting the standard for innovation, operational efficiency, and sustainable growth.</p>
-
+            <p>To become the leading provider of premium automation services, ensuring that businesses thrive in the digital era.</p>
+            
             <h2>Our Values</h2>
-            <ul>
-                <li><strong>Innovation</strong>: We consistently push boundaries, delivering cutting-edge solutions that transform industries.</li>
-                <li><strong>Excellence</strong>: Quality and attention to detail are at the core of everything we do.</li>
-                <li><strong>Partnership</strong>: We work closely with our clients to build long-term relationships based on trust and collaboration.</li>
+            <ul class="values-list">
+                <li><strong>Innovation:</strong> We push the boundaries of technology to deliver next-level solutions.</li>
+                <li><strong>Excellence:</strong> Our commitment to quality is reflected in every service we provide.</li>
+                <li><strong>Collaboration:</strong> We build long-lasting partnerships with our clients.</li>
             </ul>
         </div>
     </section>
