--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,11 +20,17 @@
         </nav>
     </header>
 
-    <!-- Contact Section -->
-    <section id="contact" class="content-section">
+    <!-- Hero Section for Contact Page -->
+    <section id="hero" class="hero-contact">
+        <h1>Contact NicheCraft Automation</h1>
+        <p>We'd love to hear from you! Reach out for any inquiries or project discussions.</p>
+    </section>
+
+    <!-- Contact Section with modern form layout -->
+    <section id="contact" class="content-section contact-content">
         <div class="contact-container">
-            <h1>Contact NicheCraft Automation</h1>
-            <p>If you have any inquiries about our services, or would like to discuss a project, feel free to reach out to us using the form below.</p>
+            <h2>Get in Touch</h2>
+            <p>If you have any questions, feel free to send us a message using the form below. Our team will get back to you shortly.</p>
 
             <form action="/send-message" method="POST" class="contact-form">
                 <div class="form-group">
