--- a/pages/admin-dashboard.html
+++ b/pages/admin-dashboard.html
@@ -22,9 +22,9 @@
     </header>
 
     <!-- Admin Dashboard Section -->
-    <section id="admin-dashboard" class="content-section">
-        <h1>Administrative Dashboard</h1>
-        <p>Welcome to the NicheCraft Automation Admin Dashboard. Here, you can monitor services, track revenue, and oversee business performance metrics.</p>
+    <section id="admin-dashboard" class="content-section admin-content">
+        <h1>Admin Dashboard</h1>
+        <p>Welcome to the NicheCraft Automation Admin Dashboard. Monitor services, track revenue, and oversee business performance.</p>
 
         <div class="dashboard-stats">
             <div class="stat-card">
