--- a/pages/about.html
+++ b/pages/about.html
@@ -20,27 +20,26 @@
         </nav>
     </header>
 
-    <!-- Hero Section for About Page -->
-    <section id="hero" class="hero-about">
-        <h1>About NicheCraft Automation</h1>
-        <p>Innovative solutions for multi-billion-dollar companies.</p>
-    </section>
-
-    <!-- About Section with a professional layout -->
+    <!-- About Section -->
     <section id="about" class="content-section about-content">
         <div class="about-container">
-            <h2>Our Mission</h2>
-            <p>NicheCraft Automation empowers global enterprises with world-class automation solutions. Our goal is to drive operational efficiency, unlock new opportunities, and create sustainable value for our clients.</p>
-            
-            <h2>Our Vision</h2>
-            <p>To become the leading provider of premium automation services, ensuring that businesses thrive in the digital era.</p>
-            
-            <h2>Our Values</h2>
-            <ul class="values-list">
-                <li><strong>Innovation:</strong> We push the boundaries of technology to deliver next-level solutions.</li>
-                <li><strong>Excellence:</strong> Our commitment to quality is reflected in every service we provide.</li>
-                <li><strong>Collaboration:</strong> We build long-lasting partnerships with our clients.</li>
-            </ul>
+            <h1>About NicheCraft Automation</h1>
+            <p class="subheading">Innovative Solutions for Multi-Billion-Dollar Companies</p>
+
+            <div class="about-text">
+                <h2>Our Mission</h2>
+                <p>NicheCraft Automation empowers global enterprises with world-class automation solutions. Our goal is to drive operational efficiency, unlock new opportunities, and create sustainable value for our clients.</p>
+
+                <h2>Our Vision</h2>
+                <p>To become the leading provider of premium automation services, ensuring that businesses thrive in the digital era.</p>
+
+                <h2>Our Values</h2>
+                <ul class="values-list">
+                    <li><strong>Innovation:</strong> We push the boundaries of technology to deliver next-level solutions.</li>
+                    <li><strong>Excellence:</strong> Our commitment to quality is reflected in every service we provide.</li>
+                    <li><strong>Collaboration:</strong> We build long-lasting partnerships with our clients.</li>
+                </ul>
+            </div>
         </div>
     </section>
 
