--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,14 +23,14 @@
     <!-- Hero Section for Contact Page -->
     <section id="hero" class="hero-contact">
         <h1>Contact NicheCraft Automation</h1>
-        <p>We'd love to hear from you! Reach out for any inquiries or project discussions.</p>
+        <p>Your business success is our priority. Reach out to us for any inquiries or collaboration opportunities.</p>
     </section>
 
-    <!-- Contact Section with modern form layout -->
+    <!-- Contact Section -->
     <section id="contact" class="content-section contact-content">
         <div class="contact-container">
             <h2>Get in Touch</h2>
-            <p>If you have any questions, feel free to send us a message using the form below. Our team will get back to you shortly.</p>
+            <p>If you have any questions or would like to discuss a project, please fill out the form below. Our team will get back to you shortly.</p>
 
             <form action="/send-message" method="POST" class="contact-form">
                 <div class="form-group">
