--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,7 +23,7 @@
     <!-- Hero Section for Contact Page -->
     <section id="hero" class="hero-contact">
         <h1>Contact NicheCraft Automation</h1>
-        <p>Your business success is our priority. Reach out to us for any inquiries or collaboration opportunities.</p>
+        <p class="hero-description">Your business success is our priority. Reach out to us for any inquiries or collaboration opportunities.</p>
     </section>
 
     <!-- Contact Section -->
